--- a/GeoAdsPlatform/Views/Shared/_Layout.cshtml
+++ b/GeoAdsPlatform/Views/Shared/_Layout.cshtml
@@ -1,1 +1,43 @@
-﻿
+﻿<!DOCTYPE html>
+<html>
+	<head>
+		
+		<title>GeoAds - the power of Where</title>
+		
+		<!-- Icon -->
+		<link rel="icon" href="/Web/images/favicon.ico" />
+		
+		<!-- Style -->
+		<link rel="stylesheet" type="text/css" href="/Web/style/main.css"/>
+	    <link rel="stylesheet" type="text/css" href="/Web/style/grids-min.css"/>
+	    <link rel="stylesheet" type="text/css" href="/Web/style/cssreset-min.css"/>
+	    <link rel="stylesheet" type="text/css" href="/Web/style/bootstrap.css"/>
+	    <link rel="stylesheet" type="text/css" href="/Web/style/flat-ui.css"/>
+	    
+	    <!-- Google Maps -->
+    	<script type="text/javascript" src="http://maps.google.com/maps/api/js?v=3.3&sensor=false&language=en"></script>
+	    
+	    
+	    <script type="text/javascript" src="/Web/libs/jquery-1.7.2.min.js"></script>
+	    <script type="text/javascript" src="/Web/libs/js.class.js"></script>
+		<script type="text/javascript" src="/Web/libs/geoads.jquery.js"></script>
+		<script type="text/javascript" src="/Web/libs/geoads.js"></script>
+		<script type="text/javascript" src="/Web/libs/mustache.js"></script>
+		<script type="text/javascript" src="/Web/libs/jsonp.js"></script>
+        <script type="text/javascript" src="/Web/libs/geoads.helpers.js"></script>
+	    
+		<!-- Font -->
+	    <link href='http://fonts.googleapis.com/css?family=Alfa+Slab+One' rel='stylesheet' type='text/css'>
+        
+        @RenderSection( "PAGE_CONFIG" )
+
+	</head>
+
+    <body>
+    <!--  Begin  -->
+	    @RenderBody()
+    <!--  End -->
+        @RenderSection( "PAGE_TEMPLATES" )
+    </body>
+	
+</html>
