--- a/GeoAdsPlatform/Web/style/main.css
+++ b/GeoAdsPlatform/Web/style/main.css
@@ -52,19 +52,20 @@ body
 	right: 0;
 	height: 50px;
 	
-/*	background-color: #00A4E4;*/
-	background: url('../images/header-bg.png') repeat-x;
+	background-color: #00A4E4;
+/*	background: url('../images/header-bg.png') repeat-x;*/
 }
 
 .page #menu .menu-item
 {
-	font-family: 'Alfa Slab One', cursive;
-	font-size: 14px;
+	/*font-family: 'Alfa Slab One', cursive;*/
+	font-family: 'Lato', sans-serif;
+	font-size: 15px;
+	font-weight: bold;
 	color: white;
-	line-height: 50px;
-	vertical-align: middle;
-	margin-left: 40px;
+	margin-left: 20px;
 	cursor: pointer;
+	vertical-align: middle;
 }
 
 .page #menu .menu-item:hover
@@ -72,11 +73,99 @@ body
 	opacity: 0.8;
 }
 
+.page #menu #home-item
+{
+	margin-right: 20px;
+}
+
 .page #menu .logo
 {
-	font-size: 30px;
+	font-size: 39px;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+.page #menu .logo.client-present
+{
+	font-size: 25px;
+}
+
+.page #menu .client
+{
+	font-size: 14px;
+	font-weight: normal;
+}
+
+/*
+ * Ads
+ */
+
+.page #ads
+{
+	position: absolute;
+	top: 50px;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	
+	font-family: 'Lato', sans-serif;
+	
+	padding: 30px;
+}
+
+.page #ads .ad
+{
+	width: 100%;
+	border: 2px solid #00A4E4;
+	padding: 20px 0px 20px 20px;
+	margin-bottom: 20px;
 	
 	cursor: pointer;
+	-moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
+.page #ads .ad:hover
+{
+	background-color:rgba(0,164,228,0.1);
+}
+
+.page #ads #ad-info
+{
+	
+}
+
+.page #ads #ad-info #name
+{
+	font-size: 20px;
+	font-weight: bold;
+}
+
+.page #ads #ad-info #description
+{
+	font-size: 13px;
+}
+
+.page #ads #buttons
+{
+	margin-top: 10px;
+}
+
+.page #ads #buttons .btn
+{
+	width: 100px;
+	margin-right: 10px;
+}
+
+.page #ads #buttons .delete
+{
+	background-color: #FF2133;
+}
+
+.page #ads #buttons .delete:hover
+{
+	background-color: #FF5664;
 }
 
 /*
