--- a/GeoAdsPlatform/Views/Login/Index.cshtml
+++ b/GeoAdsPlatform/Views/Login/Index.cshtml
@@ -42,25 +42,25 @@
 	    <img src="/Web/images/login-icon.png" alt="Welcome to GeoAds">
 	    <h4>Welcome to <small>GeoAds</small></h4>
     </div>
-	    <div class="login-form">
-	    <div class="control-group">
-	        <input type="text" class="login-field" value="" placeholder="Enter your email" id="login-email">
-	        <label class="login-field-icon fui-man-16" for="login-name"></label>
-	    </div>
+	    <form class="login-form">
+	        <div class="control-group">
+	            <input autocomplete="on" type="text" class="login-field" value="" placeholder="Enter your email" id="login-email">
+	            <label class="login-field-icon fui-man-16" for="login-name"></label>
+	        </div>
 	
-	    <div class="control-group">
-	        <input type="password" class="login-field" value="" placeholder="Password" id="login-pass">
-	        <label class="login-field-icon fui-lock-16" for="login-pass"></label>
-	    </div>
+	        <div class="control-group">
+	            <input autocomplete="on" type="password" class="login-field" value="" placeholder="Password" id="login-pass">
+	            <label class="login-field-icon fui-lock-16" for="login-pass"></label>
+	        </div>
 	            
-        {{#errorMessage}}
-			<div class="error-message">{{errorMessage}}</div>
-		{{/errorMessage}}
+            {{#errorMessage}}
+			    <div class="error-message">{{errorMessage}}</div>
+		    {{/errorMessage}}
 
-	    <a id="loginBtn" class="btn btn-primary btn-large btn-block" href="#">Sign in</a>
-	    <a id="registerBtn" class="register-link" href="#">Don't have an account? Register!</a>
-<!-- 	            <a id="lostBtn" class="login-link" href="#">Lost your password?</a> -->
-	    </div>
+	        <a id="loginBtn" class="btn btn-primary btn-large btn-block" href="#">Sign in</a>
+	        <a id="registerBtn" class="register-link" href="#">Don't have an account? Register!</a>
+    <!-- 	            <a id="lostBtn" class="login-link" href="#">Lost your password?</a> -->
+	    </form>
 </script>
 }
 
