--- a/GeoAdsPlatform/Views/Shared/_Layout.cshtml
+++ b/GeoAdsPlatform/Views/Shared/_Layout.cshtml
@@ -8,11 +8,12 @@
 		<link rel="icon" href="/Web/images/favicon.ico" />
 		
 		<!-- Style -->
-		<link rel="stylesheet" type="text/css" href="/Web/style/main.css"/>
+        <link rel="stylesheet" type="text/css" href="/Web/libs/scroller/jscrollpane.css" />
 	    <link rel="stylesheet" type="text/css" href="/Web/style/grids-min.css"/>
 	    <link rel="stylesheet" type="text/css" href="/Web/style/cssreset-min.css"/>
 	    <link rel="stylesheet" type="text/css" href="/Web/style/bootstrap.css"/>
 	    <link rel="stylesheet" type="text/css" href="/Web/style/flat-ui.css"/>
+        <link rel="stylesheet" type="text/css" href="/Web/style/main.css"/>
 	    
 	    <!-- Google Maps -->
     	<script type="text/javascript" src="http://maps.google.com/maps/api/js?v=3.3&sensor=false&language=en"></script>
@@ -25,6 +26,13 @@
 		<script type="text/javascript" src="/Web/libs/mustache.js"></script>
 		<script type="text/javascript" src="/Web/libs/jsonp.js"></script>
         <script type="text/javascript" src="/Web/libs/geoads.helpers.js"></script>
+        
+        <!-- Add mousewheel plugin (this is optional) -->
+		<script type="text/javascript" src="/Web/libs/scroller/jquery.mousewheel-3.0.6.pack.js"></script>
+	
+		<!-- Add scroll panel -->
+		<script type="text/javascript" src="/Web/libs/scroller/jquery.jscrollpane.min.js"></script>
+
 	    
 		<!-- Font -->
 	    <link href='http://fonts.googleapis.com/css?family=Alfa+Slab+One' rel='stylesheet' type='text/css'>
